src/App.css
/* ... */
.card-container:hover {
  cursor: pointer;
  box-shadow: .5em .5em rgba(117, 117, 117, .3);
  /* margin-top: -.5em; */
}

.card-container__image {
  display: flex;
  align-items: center;
  justify-content: center;
}

.card-container__image img {
  width: 100%;
  max-height: 200px;
  object-fit: cover;
  border-radius: .5em .5em 0 0;
}

.card-container__content {
  font-family: 'Open Sans', sans-serif;
  padding: 1em 2em;
}

.card-container__content__title h1 {
  color: rgb(41, 39, 39);
}

.card-container__content__body p {
  font-size: .85em;
  color: rgb(44, 44, 44);
  margin-top: 1em;
  /* max-height: 2.8em; */
  width: 100%;
}

.card-container__content__footer p {
  font-size: .8em;
  opacity: .7;
  margin-top: 2em;
}

/* User Form */

.user-form {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 0 auto;
  width: 60%;
  margin-top: 2em;
  padding-bottom: 6em;
  min-height: 100%;
}

.form-container {
  display: flex;
  flex-direction: column;
  padding: 2em;
  width: 35%;
  border: 1px solid rgba(77, 77, 77, .3);
  border-radius: .5em;
  margin-top: 2em;
  border-top: .5em solid rgb(64, 64, 194);
  box-shadow: .5em .5em rgba(117, 117, 117, .3);
}

.form-container form {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.form-group {
  margin-top: 1em;
  width: 100%;
  display: flex;
  flex-direction: column;
}

.form-group label {
  opacity: .7;
}

.form-group .inputBox {
  height: 2em;
  padding: 1.2em 1em;
  /* text-align: center; */
  border: none;
  transition: border-color 1s;
  background-color: rgb(229, 228, 226);
  margin-top: 1em;
  border-radius: .2em .2em 0 0;
}

.form-group .inputBox:focus {
  outline: none;
  border-bottom: 2px solid;
  border-color: rgb(54, 54, 238);
}

.form-group input[type="submit"] {
  margin-left: auto;
  padding: 1em;
  cursor: pointer;
  margin-top: 1.5em;
  border: none;
  width: 30%;
  background-color: rgb(83, 83, 190);
  color: white;
  border-radius: .5em;
  width: auto;
}

.form-group input[type="submit"]:hover {
  background-color: rgb(53, 53, 209);
}

.form-footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 1.5em;
  font-size: .8em;
  opacity: .8;
}

.googleAuth-container {
  display: flex;
  flex-direction: column;
}

.googleAuth-container img {
  height: 32px;
}

.googleAuth-container button {
  padding: .5em 0;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 1px solid rgba(117, 117, 117, .3);
}

.googleAuth-container button:hover {
  background-color: rgba(239, 239, 239, 0.2);
}

/* Create Container */

.create-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0 auto;
  padding-top: 2em;
  width: 100%;
  margin-bottom: 4em;
}

.create-container h1 {
  opacity: .8;
}

.create-form-container {
  display: flex;
  width: 50%;
  padding: 1em 4em;
  margin: 1em auto;
}

.create-form-container form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 0 auto;
  width: 100%;
  box-shadow: .5em .5em rgba(117, 117, 117, .3);
  border: 1px solid rgba(117, 117, 117, .3);
  border-radius: .5em;
  padding: 2em 3em;
}

.create-form-container form input[type="text"] {
  height: 2em;
  padding: 1em;
  border: none;
  border-bottom: 1px solid black;
  margin: 1em 0 2em 0;
}

.create-form-container form input[type="text"]:focus {
  outline: none;
  border-bottom: 2px solid rgb(53, 53, 209);
}

.create-form-container form textarea {
  padding: 1em;
  margin: 1em 0 2em 0;
  resize: none;
}

.create-form-container form input[type="submit"] {
  padding: 1em;
  cursor: pointer;
  border-radius: .5em;
  border: none;
  background-color: rgb(64, 64, 194);
  color: white;
  width: auto;
  margin-top: 2em;
}

.create-form-container form input[type="file"] {
  display: flex;
  width: 100%;
  /* margin: 1em 0; */
}

.create-form-container form input[type="file"] label {
  font-size: .5em;
  /* margin: 1em 0; */
}


/* User Messages */

.userMessage-container {
  padding: 1em 2em;
  color: white;
  border-radius: .5em;
  font-size: .6em;
}

.success {
  background-color: rgb(72, 234, 72);
}

.danger {
  background-color: rgb(237, 67, 67);
}

.active {
  border-bottom: 2px solid white;
}

/* Blog Post */

.blog-post__container {
  margin-top: 1em;
  display: flex;
  margin: 0 auto;
  min-width: 50%;
  max-width: 50%;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  margin-bottom: 4em;
  padding: 0 4em;
}

.blog-post__content {
  width: 100%;
}

.blog-post__actions {
  margin-top: 2em;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  margin-left: auto;
}

.blog-post__actions button {
  padding: .5em 1em;
  margin: 0 .25em;
  border-radius: .5em;
  border: none;
  cursor: pointer;
}

.blog-post__actions #edit-btn a {
  text-decoration: none;
  color: white;
}

.blog-post__actions #edit-btn {
  background-color: rgb(235, 180, 70);
}

.blog-post__actions #edit-btn:hover {
  background-color: rgb(240, 166, 20);
}

.blog-post__actions #del-btn {
  background-color: rgb(236, 77, 77);
  color: white;
}

.blog-post__actions #del-btn:hover {
  background-color: rgb(243, 19, 19);
}


.blog-post__content__title {
  margin-top: 1em;
  font-size: 1.2rem;
}

.blog-post__content__author {
  padding-left: 1em;
  border-left: .2em solid rgb(54, 54, 238);
}

.blog-post__content__author p {
  opacity: .7;
}

.blog-post__content__author #blogpost-date {
  font-size: .7em;
}

.blog-post__content__image {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  margin-top: 4em;
  border: 1px solid black;
  border-radius: 5px;
}

.blog-post__content__image img {
  width: 100%;
  border-radius: 5px;
  max-height: 300px;
  object-fit: cover;
  object-position: top;
}
/* ... */

